--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eye-web",
   "version": "0.1.0",
   "private": "false",
-  "homepage": "https://Yashbharadva.github.io/eye-web",
+  "homepage": "http://Yashbharadva.github.io/eye-web",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
